--- a/practice/style.css
+++ b/practice/style.css
@@ -7,6 +7,7 @@
 /* global */
 
 
+
 .container {
     text-align: center;
 }
@@ -14,11 +15,19 @@
 
 /* header */
 header .container {
-    background-color: rgba(213, 243, 255, 0.1);
+    background: aqua;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 header .logo {
     padding-top: 10px;
+    text-align: left;
+    margin-left: 65px;
+}
+
+header img {
+    width: 50px;
 }
 
 header {
@@ -28,18 +37,25 @@ header {
 header ul {
     padding-top: 5px;
     list-style: none;
+    display: flex;
+    float: right;
+    line-height: auto;
+    margin-top: -10px;
 }
 
 header li {
     padding-top: 10px;
     line-height: 50px;
     transition: .3s ease;
+    font-size: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 header a {
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 header li:hover {
@@ -50,82 +66,135 @@ header a:hover {
     color: white;
 }
 
-/* Showcase */
-
-.showcase {
-    color: black;
-}
-.showcase .container {
-    padding-top: 40px;
-    padding-bottom: 40px;
+.contacts {
+    margin-right: 40px;
 }
 
+/* icon-bar */
 
-.showcase .container .slogan {
-    margin-top: 20px;
+.icon-bar {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgb(179, 245, 236);
 }
 
-.showcase .slogan ul {
-    margin-top: 10px;
-}
-
-.showcase .slogan li {
+.icon-bar i {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
     font-size: 20px;
+    margin-top: 5px;
     margin-bottom: 5px;
-    
 }
 
-/* projects */
-
-.projects img {
-    width: 90%;
+.icon-bar i:hover {
+    background-color: black;
 }
 
-.projects .container {
-    color: black;
-    font-size: 20px;
+.icon-bar .fa-medium-m {
+    background: darkslategray;
 }
 
-.projects article {
-    margin-bottom: 40px;
+.icon-bar .fa-twitter {
+    background: cornflowerblue;
 }
 
-@media (min-width: 768px) {
-    /* header */
-    header .container{
-        display: grid;
-        grid-template-columns: 50% 50%;
-    }
+.icon-bar .fa-linkedin {
+    background: darkcyan;
+}
 
-    header .logo {
-        text-align: left;
-        margin-left: 65px;
-    }
+.icon-bar .fa-github {
+    background: purple;
+}
 
-    header ul {
-        display: flex;
-        float: right;
-        line-height: auto;
-        margin-top: -10px;
-    }
+.icon-bar .fa-youtube {
+    background: rgb(199, 0, 0);
+}
 
-    header a {
-        font-size: 25px;
-    }
+/* flipcards */
 
+/*making the cards flip*/
+.flip {
+    position: relative;
+}
 
-    header li {
-        font-size: 25px;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-    
-    .contacts {
-        margin-right: 40px;
-    }
+.flip > .front, .flip > .back {
+    display: block;
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-duration: 0.5s;
+    transition-property: transform, opacity;
+}
 
-    /* projects */
-    .projects img {
-        width: 70%;
-    }
+.flip > .front {
+    transform: rotateY(0deg);
+}
+
+.flip > .back {
+    position: absolute;
+    opacity: 0;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(-180deg);
+}
+
+.flip:hover > .front {
+    transform: rotateY(180deg);
+}
+
+.flip:hover > .back {
+    opacity: 1;
+    transform: rotateY(0deg);
+}
+
+/*customizing flip-cards*/
+.cards .container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5%;
+
+}
+
+.flip {
+    position: relative;
+    display: inline-block;
+
+    margin-bottom: 1em;
+    width: 300px;
+}
+
+.flip > .front, .flip > .back {
+    display: block;
+    color: white;
+    width: inherit;
+    background-size: cover !important;
+    background-position: center !important;
+    height: 400px;
+    background: #313131;
+    border-radius: 10px;
+}
+
+.flip > .front h1 {
+    font-size: 1.9em;
+    padding-top: 5px;
+}
+
+.flip > .back h2 {
+    font-size: 1.7em;
+    padding-top: 5px;
+}
+
+.flip > .back p {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.flip > .front p, .flip > .back p {
+    font-size: 1.3em;
+    line-height: 160%;
+    color: white;
 }
