--- a/practice/style.css
+++ b/practice/style.css
@@ -14,8 +14,9 @@
     position: relative;
     width: 100%;
     font-family: 'Muli', sans-serif;
-    margin-bottom: 500px;
 }
+
+
 
 .home-container {
     height: 100vh;
@@ -103,7 +104,7 @@ header a:hover {
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
-    background: rgb(179, 245, 236);
+    z-index: 1;
 }
 
 .icon-bar i {
@@ -139,6 +140,10 @@ header a:hover {
 
 .icon-bar .fa-youtube {
     background: rgb(199, 0, 0);
+}
+
+.icon-bar .fa-codepen {
+    background: rgb(62, 124, 160);
 }
 
 /* flipcards */
@@ -218,15 +223,14 @@ header a:hover {
     padding-top: 5px;
 }
 
-.flip > .back p {
-    padding-right: 5px;
-    padding-left: 5px;
-}
 
 .flip > .front p, .flip > .back p {
     font-size: 1.3em;
     line-height: 160%;
     color: white;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .flip-button {
@@ -289,6 +293,11 @@ header a:hover {
 .projectsButton i {
     margin-top: 30px;
     font-size: 100px;
+    color: black;
+}
+
+.projectsButton h1 {
+    color: black;
 }
 
 /* projects */
@@ -296,21 +305,21 @@ header a:hover {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: lightgreen;
+    background: rgba(245, 222, 179, 0.5);
 }
 
 #project2 .container {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: lightsalmon;
+    background: rgba(123, 196, 224, 0.5);;
 }
 
 #project3 .container {
     width: 100%;
     height: 100vh;
     position: relative;
-    background: lightskyblue;
+    background: rgba(245, 222, 179, 0.5);
 }
 
 .project .container {
@@ -344,8 +353,11 @@ header a:hover {
 }
 
 .project .container p {
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: bold;
     margin-bottom: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .project .container h2 {
@@ -359,8 +371,17 @@ header a:hover {
     font-size: 20px;
     cursor: pointer;
     border: none;
-    background-color: pink;
+    background-color: rgb(167, 220, 255);
     transition: 0.2s ease;
+    outline: none;
+}
+
+#project2 .button {
+    background: wheat;
+}
+
+#project2 .button:hover {
+    background: white;
 }
 
 .project .button:hover {
@@ -516,6 +537,16 @@ header a:hover {
     text-align: center;
 }
 
+.contacts-container {
+    font-family: 'Muli', sans-serif;
+    background-image: url('./../img/waves5.jpg');
+    height: 1000px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+
 .all-contacts .thanks {
     margin-top: 60px;
 }
@@ -542,7 +573,7 @@ header a:hover {
 
 .contact-form {
     border-radius: 10px;
-    background: orange;
+    background: rgba(255, 165, 0, 0.5);
     border: none;
 }
 
@@ -602,5 +633,19 @@ input[type="subject"] {
     cursor: pointer;
     border: none;
 
+}
+
+.phone a {
+    color: white;
+    text-decoration: none;
+}
+
+.contacts .all-contacts .contacts-top {
+    background: rgba(255, 165, 0, 0.5);
+    margin-left: 40px;
+    padding-top: 1px;
+    padding-bottom: 20px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
 
