--- a/style.css
+++ b/style.css
@@ -926,11 +926,20 @@ input[type="subject"] {
 @media only screen 
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
-  and (-webkit-min-device-pixel-ratio: 2) {
+  and (-webkit-min-device-pixel-ratio: 2) 
+  and (orientation: portrait) {
     .background-container {
         background-image: url('./img/water1.jpg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 100%;
     }
   }
+
+  @media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) 
+  and (orientation: landscape) {
+    .background-container {
+        background-image: url('./img/waves.jpg');
+
+    }
+}
