--- a/style.css
+++ b/style.css
@@ -918,7 +918,9 @@ input[type="subject"] {
     }   
 }
 
-
+@media (max-width: 900px) {
+    
+}
 
 
 
@@ -1013,3 +1015,4 @@ input[type="subject"] {
         background: rgb(228, 228, 228); 
     }
 }
+
